Bug 534798 - Infinite loop at SizeConfig.correctPercentageValues()
Change-Id: I8e2fbe4d160ecf5c453495613e250e82c6bf6444
Signed-off-by: Dirk Fauth <dirk.fauth@googlemail.com>